@@ -28,6 +28,7 @@ import org.apache.batik.parser.FragmentIdentifierHandler;
 import org.apache.batik.parser.FragmentIdentifierParser;
 import org.apache.batik.parser.ParseException;
 import org.apache.batik.parser.PreserveAspectRatioParser;
+import org.apache.batik.dom.util.DOMUtilities;
 import org.apache.batik.util.SVGConstants;
 
 import org.w3c.dom.Document;
@@ -80,30 +81,37 @@ public abstract class ViewBox implements SVGConstants, ErrorConstants {
         p.setFragmentIdentifierHandler(vh);
         p.parse(ref);
 
-        Element attrDefElement = e; // the element that defines the attributes
+        // Determine the 'view' element that ref refers to.
+        Element viewElement = e;
         if (vh.hasId) {
             Document document = e.getOwnerDocument();
-            attrDefElement = document.getElementById(vh.id);
+            viewElement = document.getElementById(vh.id);
         }
-        if (attrDefElement == null) {
+        if (viewElement == null) {
             throw new BridgeException(ctx, e, ERR_URI_MALFORMED,
                                       new Object[] {ref});
         }
-        // if the referenced element is not a view, the attribute
-        // values to use are those defined on the enclosed svg element
-        if (!(attrDefElement.getNamespaceURI().equals(SVG_NAMESPACE_URI)
-              && attrDefElement.getLocalName().equals(SVG_VIEW_TAG))) {
-            attrDefElement = getClosestAncestorSVGElement(e);
+        if (!(viewElement.getNamespaceURI().equals(SVG_NAMESPACE_URI)
+              && viewElement.getLocalName().equals(SVG_VIEW_TAG))) {
+            viewElement = null;
         }
 
+        Element ancestorSVG = getClosestAncestorSVGElement(e);
+
         // 'viewBox'
-        float [] vb;
+        float[] vb;
         if (vh.hasViewBox) {
             vb = vh.viewBox;
         } else {
-            String viewBoxStr = attrDefElement.getAttributeNS
-                (null, SVG_VIEW_BOX_ATTRIBUTE);
-            vb = parseViewBoxAttribute(attrDefElement, viewBoxStr, ctx);
+            Element elt;
+            if (DOMUtilities.isAttributeSpecifiedNS
+                    (viewElement, null, SVG_VIEW_BOX_ATTRIBUTE)) {
+                elt = viewElement;
+            } else {
+                elt = ancestorSVG;
+            }
+            String viewBoxStr = elt.getAttributeNS(null, SVG_VIEW_BOX_ATTRIBUTE);
+            vb = parseViewBoxAttribute(elt, viewBoxStr, ctx);
         }
 
         // 'preserveAspectRatio'
@@ -113,16 +121,23 @@ public abstract class ViewBox implements SVGConstants, ErrorConstants {
             align = vh.align;
             meet = vh.meet;
         } else {
-            String aspectRatio = attrDefElement.getAttributeNS
-                (null, SVG_PRESERVE_ASPECT_RATIO_ATTRIBUTE);
+            Element elt;
+            if (DOMUtilities.isAttributeSpecifiedNS
+                    (viewElement, null, SVG_PRESERVE_ASPECT_RATIO_ATTRIBUTE)) {
+                elt = viewElement;
+            } else {
+                elt = ancestorSVG;
+            }
+            String aspectRatio =
+                elt.getAttributeNS(null, SVG_PRESERVE_ASPECT_RATIO_ATTRIBUTE);
             PreserveAspectRatioParser pp = new PreserveAspectRatioParser();
             ViewHandler ph = new ViewHandler();
             pp.setPreserveAspectRatioHandler(ph);
             try {
                 pp.parse(aspectRatio);
-            } catch (ParseException pEx ) {
+            } catch (ParseException pEx) {
                 throw new BridgeException
-                    (ctx, attrDefElement, pEx, ERR_ATTRIBUTE_VALUE_MALFORMED,
+                    (ctx, elt, pEx, ERR_ATTRIBUTE_VALUE_MALFORMED,
                      new Object[] {SVG_PRESERVE_ASPECT_RATIO_ATTRIBUTE,
                                        aspectRatio, pEx });
             }
